<?xml version="1.0"?>
<package>
  <name>icart_mini_gazebo</name>
  <version>0.0.0</version>
  <description>The icart_mini_gazebo package</description>

  <maintainer email="method_aspect_card@yahoo.co.jp">Daiki Maekawa</maintainer>

  <license>BSD</license>

  <author email="method_aspect_card@yahoo.co.jp">Daiki Maekawa</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>t_frog_description</run_depend>
  <run_depend>t_frog_control</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
